--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <h1 class="header-container-title">Hi, I'm Leonel NGOYA<img src="img/Hi.gif"></h1>
                     <h1 class="header-container-subtitle">Front End Developer</h1>
                     <h2>This is my personal site, where you will find all the information about me.</h2>
-                    <a href="https://drive.google.com/file/d/1APJJQC1MCc2M2JHL8d8Iqu6bt4vFpf6X/view?usp=sharing"
+                         <a href="https://drive.google.com/file/d/1-Z9aaaiu-AV77IPqlwnYnr57y4IfrVqT/view?usp=sharing"
                         target="_blank" class="header-container-cv">My CV</a>
                 </div>
             </div>
@@ -170,8 +170,9 @@
 
         <div class="about" id="about">
             <h1 class="about-title">About me</h1>
-            <h2 class="about-about">
-                I am an 18 year old <b>front-end developer</b> from Cameroon. <br> I want to be as creative as possible
+             <h2 class="about-about">
+                I am an 18 year old <b>front-end developer</b> from Cameroon with <b>3 years experience</b>. <br> I want
+                to be as creative as possible
                 by using my imagination and my intellectual abilities in my work. <br> My goal is to make a site as
                 beautiful and attractive as possible.
             </h2>
