--- a/index.fr.html
+++ b/index.fr.html
@@ -162,7 +162,7 @@
                     <h1 class="header-container-title">Salut, moi c'est Leonel NGOYA<img src="img/Hi.gif"></h1>
                     <h1 class="header-container-subtitle">Développeur FrontEnd</h1>
                     <h2>Ici c'est mon site personnel, où vous y trouverez toutes les informations me concernant.</h2>
-                    <a href="https://drive.google.com/file/d/1APJJQC1MCc2M2JHL8d8Iqu6bt4vFpf6X/view?usp=sharing"
+                      <a href="https://drive.google.com/file/d/1-Z9aaaiu-AV77IPqlwnYnr57y4IfrVqT/view?usp=sharing"
                         target="_blank" class="header-container-cv">Mon CV</a>
                 </div>
             </div>
@@ -171,7 +171,8 @@
         <div class="about" id="about">
             <h1 class="about-title">À propos de moi</h1>
             <h2 class="about-about">
-                Je suis un <b>développeur front-end</b> Camerounais agé de 18 ans.<br> Je me veux d'être le plus créatif
+                Je suis un <b>développeur front-end</b> Camerounais agé de 18 ans ayant <b>3 ans d'expérience</b>.<br>
+                Je me veux d'être le plus créatif
                 possible en utilisant mon imagination et mes capacités intellectuelles dans mon travail.<br> Mon but est
                 de rendre un site le plus
                 beau et attirant possible.
