--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                                             alt="Mboa Digital"></a>
                                 </div>
                                 <div class="experience-cards-container-card-container">
-                                    <h3>Junior Digital Consultant <span>CDD</span></h3>
+                                    <h3>Digital Consultant <span>CDD</span></h3>
                                     <p class="experience-cards-container-card-container-description">
                                         <b>September 2022 • Present</b>
                                     <p>Mboa Digital • Yaounde</p>
