--- a/index.fr.html
+++ b/index.fr.html
@@ -316,7 +316,7 @@
                                             alt="Mboa Digital"></a>
                                 </div>
                                 <div class="experience-cards-container-card-container">
-                                    <h3>Consultant Digital Junior <span>CDD</span></h3>
+                                    <h3>Consultant Digital<span>CDD</span></h3>
                                     <p class="experience-cards-container-card-container-description">
                                         <b>Septembre 2022 • Présent</b>
                                     <p>Mboa Digital • Yaounde</p>
