ajout de peef dev

--- a/index.html
+++ b/index.html
@@ -567,6 +567,9 @@
                     <a href="https://canon-yaounde.leonelngoya.com/" target="_blank">
                         <img src="projets/canon-yde-new.webp" alt="canon-yde-new">
                     </a>
+                    <a href="https://peef.leonelngoya.com/" target="_blank">
+                        <img src="projets/peef-dev.png" alt="peef-dev">
+                    </a>
                     <a href="https://camer-djoss.leonelngoya.com/" target="_blank">
                         <img src="projets/camerdjoss.webp" alt="camerdjoss">
                     </a>
