--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                         <img src="projets/canon-yde-new.webp" alt="canon-yde-new">
                     </a>
                     <a href="https://peef.leonelngoya.com/" target="_blank">
-                        <img src="projets/peef-dev.png" alt="peef-dev">
+                        <img src="projets/peef-dev.webp" alt="peef-dev">
                     </a>
                     <a href="https://camer-djoss.leonelngoya.com/" target="_blank">
                         <img src="projets/camerdjoss.webp" alt="camerdjoss">
