--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#other">Others</a></li>
+                <li><a href="https://shop.lndev.me/tshirt" target="_blank">Shop</a></li>
                 <li><a href="https://laravel.cm/user/ln-dev7" target="_blank">Blog</a></li>
                 <li>
                     <a href="https://twitter.com/ln_dev7?s=09" target="_blank">
