--- a/index.fr.html
+++ b/index.fr.html
@@ -97,6 +97,7 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#experience">Expérience</a></li>
                 <li><a href="#other">Autres</a></li>
+                <li><a href="https://shop.lndev.me/tshirt" target="_blank">Boutique</a></li>
                 <li><a href="https://laravel.cm/user/ln-dev7" target="_blank">Blog</a></li>
                 <li>
                     <a href="https://twitter.com/ln_dev7?s=09" target="_blank">
