ajout certification dyma

--- a/index.html
+++ b/index.html
@@ -733,6 +733,23 @@
                                     </div>
                         </div>
                         <div class="cert-card">
+                            <a href="https://dyma.fr/certification/63300a96a22ba8370fa7100e/62f4c4d331c06fe481691daf"
+                                target="_blank">
+                                <div class="card-img">
+                                    <img src="./img/dyma.webp" alt="dyma" />
+                                </div>
+                            </a>
+                            <div class="card-body">
+                                <div class="card-body__text">
+                                    <h3>Dyma</h3>
+                                    <h5>Click on the picture</h5>
+                                </div>
+                                             <div class="card-body__footer">
+                                    <button>Algorithme</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cert-card">
                             <a href="https://drive.google.com/drive/folders/1U677r2Nnmtq8pm8klai63iOYFMSuWxl6?usp=sharing"
                                 target="_blank">
                                 <div class="card-img">
