--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <a href="index.html" class="navigation-logo">
                 LN DEV.
             </a>
-            <a href="mailto:leonelngoya@gmail.com" class="navigation-mail"><span>CONTACT</span><img src="img/mail.svg"
+            <a href="mailto:me@leonelngoya.com" class="navigation-mail"><span>CONTACT</span><img src="img/mail.svg"
                     alt="mail"></a>
         </nav>
 
@@ -163,7 +163,7 @@
                     <h1 class="header-container-title">Hi, I'm Leonel NGOYA<img src="img/Hi.gif"></h1>
                     <h1 class="header-container-subtitle">Front End Developer</h1>
                     <h2>This is my personal site, where you will find all the information about me.</h2>
-                         <a href="https://drive.google.com/file/d/1-Z9aaaiu-AV77IPqlwnYnr57y4IfrVqT/view?usp=sharing"
+                         <a href="https://drive.google.com/file/d/12FqgmRBQ_1IVlfZRDuB7w0iAZu30aqKC/view?usp=sharing"
                         target="_blank" class="header-container-cv">My CV</a>
                 </div>
             </div>
