--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
                                     </div>
                         </div>
                         <div class="cert-card">
-                            <a href="https://dyma.fr/certification/63300a96a22ba8370fa7100e/62f4c4d331c06fe481691daf"
+                            <a href="https://drive.google.com/drive/folders/1GbzS-5-Fpu_ZJlEc8SGu036O3gopZBy3?usp=sharing"
                                 target="_blank">
                                 <div class="card-img">
                                     <img src="./img/dyma.webp" alt="dyma" />
@@ -745,6 +745,7 @@
                                     <h5>Click on the picture</h5>
                                 </div>
                                              <div class="card-body__footer">
+                                                 <button>React</button>
                                     <button>Algorithme</button>
                                 </div>
                             </div>
