--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
                                     <h5>Click on the picture</h5>
                                 </div>
                                              <div class="card-body__footer">
-                                                 <button>React</button>
+                                                 <button>React 18</button>
                                     <button>Algorithme</button>
                                 </div>
                             </div>
