--- a/index.fr.html
+++ b/index.fr.html
@@ -751,7 +751,7 @@
                                     <h5>Cliquez sur l' image</h5>
                                 </div>
                                              <div class="card-body__footer">
-                                                  <button>React</button>
+                                                  <button>React 18</button>
                                     <button>Algorithme</button>
                                 </div>
                             </div>
