--- a/index.fr.html
+++ b/index.fr.html
@@ -197,7 +197,7 @@
                     regarder le football. comme sport, je pratiquer le volley-ball.<br> <br> Comme la majorité des
                     développeurs, pour coder j'adore les endroits
                     calme avec une bonne musique, pour cela j'ai une <a style="color: #5e72e4;"
-                        href="https://open.spotify.com/playlist/1fciPOQsvJFvA22F9PeEOU?si=3a273df004d847ce"
+                        href="https://open.spotify.com/playlist/2akHeWgVqLdf453oKj4lPH?si=ZdA5H7VMTm2OtjfdxFiEtg"
                         target="_blank">playlist Spotify</a> que j'écoute la plus part de mon temps.
                 </h3>
             </div>
