--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     a sport, I practice volleyball. <br><br> Like the majority of developers, to code I love quiet
                     places with
                     good music, for that I have a
-                    <a href="https://open.spotify.com/playlist/1fciPOQsvJFvA22F9PeEOU?si=3a273df004d847ce"
+                    <a href="https://open.spotify.com/playlist/2akHeWgVqLdf453oKj4lPH?si=ZdA5H7VMTm2OtjfdxFiEtg"
                         target="_blank"> Spotify playlist </a> that I listen to most of my time.
                 </h3>
             </div>
