--- a/index.fr.html
+++ b/index.fr.html
@@ -12,12 +12,12 @@
     <meta name="twitter:site" content="@ln_dev7">
     <meta name="twitter:creator" content="@ln_dev7">
     <meta name="twitter:description" content="Développeur FrontEnd - Intégrateur Web,">
-    <meta name="twitter:image" content="img/ln.webp">
+    <meta name="twitter:image" content="img/ln.png">
     <meta name="twitter:card" content="img/lndev.webp">
     <meta name="description" content="Développeur FrontEnd">
     <meta name="keywords" content="LN Developemrnt, NGOYA, Leonel, Développeur FrontEnd, Intégrateur Web, Camerounais">
     <!--Open Graph-->
-    <meta property="og:image" content="img/ln.webp">
+    <meta property="og:image" content="img/ln.png">
     <meta property="og:title" content="💻 NGOYA LEONEL️ 🌴️">
     <meta property="og:description"
         content="Je développe des sites et applications web responsive dans lesquels j'utilise mon inspiration pour avoir une interface belle et compréhensible par l'utilisateur tout en respectant les demandes des clients et dans certains cas en communiquant avec des API.">
@@ -157,7 +157,7 @@
         <header class="header" id="header">
             <div class="containers">
                 <div class="header-img">
-                    <img src="img/ln.webp" alt="ma photo">
+                    <img src="img/ln.png" alt="ma photo">
                 </div>
                 <div class="header-container">
                     <h1 class="header-container-title">Salut, moi c'est Leonel NGOYA<img src="img/Hi.gif"></h1>
