ajout de app expenses

--- a/index.fr.html
+++ b/index.fr.html
@@ -162,7 +162,7 @@
                     <h1 class="header-container-title">Salut, moi c'est Leonel NGOYA<img src="img/Hi.gif"></h1>
                     <h1 class="header-container-subtitle">Développeur FrontEnd</h1>
                     <h2>Ici c'est mon site personnel, où vous y trouverez toutes les informations me concernant.</h2>
-                      <a href="https://drive.google.com/file/d/12FqgmRBQ_1IVlfZRDuB7w0iAZu30aqKC/view?usp=sharing"
+                    <a href="https://drive.google.com/file/d/12FqgmRBQ_1IVlfZRDuB7w0iAZu30aqKC/view?usp=sharing"
                         target="_blank" class="header-container-cv">Mon CV</a>
                 </div>
             </div>
@@ -189,8 +189,10 @@
             <div class="about-hobbies">
                 <h3>
                     Je suis un peu passionné par l'écriture et le montage des vidéos, c'est pour cette raison que
-                    j'écris souvent des <a style="color: #5e72e4;" href="https://laravel.cm/user/ln-dev7">articles sur le site de Laravel
-                        Cameroon</a> et je fais aussi des <a style="color: #5e72e4;" href="https://www.youtube.com/c/LNDev">vidéos YouTube sur
+                    j'écris souvent des <a style="color: #5e72e4;" href="https://laravel.cm/user/ln-dev7">articles sur
+                        le site de Laravel
+                        Cameroon</a> et je fais aussi des <a style="color: #5e72e4;"
+                        href="https://www.youtube.com/c/LNDev">vidéos YouTube sur
                         ma chaine</a>. <br> <br>
                     Je m'intéresse beaucoup aux séries de réflexion et de suspens, par ailleurs j'aime aussi beaucoup
                     regarder le football. comme sport, je pratiquer le volley-ball.<br> <br> Comme la majorité des
@@ -248,16 +250,16 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="brand-text">
             <p>
                 Venez
-        <a href="https://www.behance.net/gallery/152461279/Ngoya-Leonel-Brand-Identity">
-             Ouvrir vos voies à un monde infini de possibilités ♾
-        </a>
+                <a href="https://www.behance.net/gallery/152461279/Ngoya-Leonel-Brand-Identity">
+                    Ouvrir vos voies à un monde infini de possibilités ♾
+                </a>
             </p>
         </div>
- 
+
         <div class="services" id="services">
             <div class="services-cards">
                 <div class="services-cards-title">
@@ -324,7 +326,9 @@
                                 </div>
                                 <div class="experience-cards-container-card-description">
                                     <h4>
-                                        Plus qu'un développeur front-end, je suis ici un consultant digital junior. Mon objectif est de concevoir des applications Web robustes avec une bonne UI/UX. Tout en travaillant en équipe.
+                                        Plus qu'un développeur front-end, je suis ici un consultant digital junior. Mon
+                                        objectif est de concevoir des applications Web robustes avec une bonne UI/UX.
+                                        Tout en travaillant en équipe.
                                     </h4>
                                     <div>
                                         <button>REACT JS</button>
@@ -381,7 +385,9 @@
                                 </div>
                                 <div class="experience-cards-container-card-description">
                                     <h4>
-                                        Durant ce stage mon objectif principal était le développement de sites internet respectant des designs très spécifiques, cela m'a permis d'augmenter mes compétences en ReactJS et aussi de mieux travailler en équipe.
+                                        Durant ce stage mon objectif principal était le développement de sites internet
+                                        respectant des designs très spécifiques, cela m'a permis d'augmenter mes
+                                        compétences en ReactJS et aussi de mieux travailler en équipe.
                                     </h4>
                                     <div>
                                         <button>REACT JS</button>
@@ -458,14 +464,14 @@
                         <div class="answer">
                             <div class="experience-cards-container-card">
                                 <div class="experience-cards-container-card-img">
-                                    <a href="https://find-a-job.vercel.app/ target="_blank"><img src="img/findajob.png"
+                                    <a href="https://find-a-job.vercel.app/ target=" _blank"><img src="img/findajob.png"
                                             alt="FindAJob"></a>
                                 </div>
                                 <div class="experience-cards-container-card-container">
                                     <h3>FrontEnd Developer</h3>
                                     <p class="experience-cards-container-card-container-description">
                                         <b>Avril 2022 • Présent</b>
-                                    <p><a href="https://find-a-job.vercel.app/ target="_blank">Find A Job</a></p>
+                                    <p><a href="https://find-a-job.vercel.app/ target=" _blank">Find A Job</a></p>
                                     </p>
                                 </div>
                                 <div class="experience-cards-container-card-description">
@@ -497,6 +503,27 @@
                                         Collection open sources des portfolios Camerounais.
                                     </h4>
                                     <div><button>ReactJS</button><button>GIT</button> <button>GITHUB</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="line"></div>
+                            <div class="experience-cards-container-card">
+                                <div class="experience-cards-container-card-img">
+                                    <a href="https://app-expenses.vercel.app/" target="_blank"><img
+                                            src="img/AppExpenses.png" alt="AppExpenses"></a>
+                                </div>
+                                <div class="experience-cards-container-card-container">
+                                    <h3>FrontEnd Developer</h3>
+                                    <p class="experience-cards-container-card-container-description">
+                                        <b>Fevrier 2022 • Présent</b>
+                                    <p><a href="https://app-expenses.vercel.app/" target="_blank">App Expenses</a></p>
+                                    </p>
+                                </div>
+                                <div class="experience-cards-container-card-description">
+                                    <h4>
+                                        Application de gestion de dépense.
+                                    </h4>
+                                    <div><button>Svelte</button><button>GIT</button> <button>GITHUB</button>
                                     </div>
                                 </div>
                             </div>
@@ -730,9 +757,9 @@
                                     <h3>Udemy</h3>
                                     <h5>Cliquez sur l' image</h5>
                                 </div>
-                                             <div class="card-body__footer">
+                                <div class="card-body__footer">
                                     <button>JavaScript</button>
-                                     <button>Svelte</button>
+                                    <button>Svelte</button>
                                     <button>NextJS</button>
                                 </div>
                             </div>
@@ -749,8 +776,8 @@
                                     <h3>Dyma</h3>
                                     <h5>Cliquez sur l' image</h5>
                                 </div>
-                                             <div class="card-body__footer">
-                                                  <button>React 18</button>
+                                <div class="card-body__footer">
+                                    <button>React 18</button>
                                     <button>Algorithme</button>
                                 </div>
                             </div>
