--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <h1 class="header-container-title">Hi, I'm Leonel NGOYA<img src="img/Hi.gif"></h1>
                     <h1 class="header-container-subtitle">Front End Developer</h1>
                     <h2>This is my personal site, where you will find all the information about me.</h2>
-                         <a href="https://drive.google.com/file/d/12FqgmRBQ_1IVlfZRDuB7w0iAZu30aqKC/view?usp=sharing"
+                    <a href="https://drive.google.com/file/d/12FqgmRBQ_1IVlfZRDuB7w0iAZu30aqKC/view?usp=sharing"
                         target="_blank" class="header-container-cv">My CV</a>
                 </div>
             </div>
@@ -170,7 +170,7 @@
 
         <div class="about" id="about">
             <h1 class="about-title">About me</h1>
-             <h2 class="about-about">
+            <h2 class="about-about">
                 I am an 19 year old <b>front-end developer</b> from Cameroon with <b>3 years experience</b>. <br> I want
                 to be as creative as possible
                 by using my imagination and my intellectual abilities in my work. <br> My goal is to make a site as
@@ -251,9 +251,9 @@
         <div class="brand-text">
             <p>
                 Come
-        <a href="https://www.behance.net/gallery/152461279/Ngoya-Leonel-Brand-Identity">
-            Open your ways to an infinite world of possibilities ♾
-        </a>
+                <a href="https://www.behance.net/gallery/152461279/Ngoya-Leonel-Brand-Identity">
+                    Open your ways to an infinite world of possibilities ♾
+                </a>
             </p>
         </div>
 
@@ -321,7 +321,8 @@
                                 </div>
                                 <div class="experience-cards-container-card-description">
                                     <h4>
-                                        More than a front-end developer, I am here a junior digital consultant. My goal is to design robust web applications with good UI/UX. While working as a team.
+                                        More than a front-end developer, I am here a junior digital consultant. My goal
+                                        is to design robust web applications with good UI/UX. While working as a team.
                                     </h4>
                                     <div>
                                         <button>REACT JS</button>
@@ -377,7 +378,9 @@
                                 </div>
                                 <div class="experience-cards-container-card-description">
                                     <h4>
-                                        During this internship my main goal was the development of websites respecting very specific designs, it allowed me to increase my skills in ReactJS and also to work better in a team.
+                                        During this internship my main goal was the development of websites respecting
+                                        very specific designs, it allowed me to increase my skills in ReactJS and also
+                                        to work better in a team.
                                     </h4>
                                     <div>
                                         <button>REACT JS</button>
@@ -494,6 +497,27 @@
                                         Open source collection of Cameroonian porfolios
                                     </h4>
                                     <div><button>ReactJS</button><button>GIT</button> <button>GITHUB</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="line"></div>
+                            <div class="experience-cards-container-card">
+                                <div class="experience-cards-container-card-img">
+                                    <a href="https://app-expenses.vercel.app/" target="_blank"><img
+                                            src="img/AppExpenses.png" alt="AppExpenses"></a>
+                                </div>
+                                <div class="experience-cards-container-card-container">
+                                    <h3>FrontEnd Developer</h3>
+                                    <p class="experience-cards-container-card-container-description">
+                                        <b>February 2022 • Present</b>
+                                    <p><a href="https://app-expenses.vercel.app/" target="_blank">App Expenses</a></p>
+                                    </p>
+                                </div>
+                                <div class="experience-cards-container-card-description">
+                                    <h4>
+                                        Expense management application.
+                                    </h4>
+                                    <div><button>Svelte</button><button>GIT</button> <button>GITHUB</button>
                                     </div>
                                 </div>
                             </div>
@@ -726,10 +750,10 @@
                                 </div>
                                 <div class="card-body__footer">
                                     <button>JavaScript</button>
-                                            <button>Svelte</button>
-                                            <button>NextJS</button>
-                                        </div>
-                                    </div>
+                                    <button>Svelte</button>
+                                    <button>NextJS</button>
+                                </div>
+                            </div>
                         </div>
                         <div class="cert-card">
                             <a href="https://drive.google.com/drive/folders/1GbzS-5-Fpu_ZJlEc8SGu036O3gopZBy3?usp=sharing"
@@ -743,8 +767,8 @@
                                     <h3>Dyma</h3>
                                     <h5>Click on the picture</h5>
                                 </div>
-                                             <div class="card-body__footer">
-                                                 <button>React 18</button>
+                                <div class="card-body__footer">
+                                    <button>React 18</button>
                                     <button>Algorithme</button>
                                 </div>
                             </div>
