--- a/index.fr.html
+++ b/index.fr.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -608,6 +607,9 @@
                     </a>
                     <a href="https://esf-website.leonelngoya.com/" target="_blank">
                         <img src="projets/esf-website.webp" alt="esf-website">
+                    </a>
+                    <a href="https://warfira.leonelngoya.com/" target="_blank">
+                        <img src="projets/warfira.png" alt="warfira">
                     </a>
                     <a href="https://app-formation.leonelngoya.com/" target="_blank">
                         <img src="projets/ln-app-formation.webp" alt="learnskillz">
