--- a/index.html
+++ b/index.html
@@ -600,6 +600,9 @@
                     <a href="https://esf-website.leonelngoya.com/" target="_blank">
                         <img src="projets/esf-website.webp" alt="esf-website">
                     </a>
+                    <a href="https://warfira.leonelngoya.com/" target="_blank">
+                        <img src="projets/warfira.png" alt="warfira">
+                    </a>
                     <a href="https://app-formation.leonelngoya.com/" target="_blank">
                         <img src="projets/ln-app-formation.webp" alt="learnskillz">
                     </a>
