--- a/index.fr.html
+++ b/index.fr.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -828,6 +829,9 @@
                         <ion-icon name="logo-instagram"></ion-icon>
                     </a>
                 </div>
+                <p><a href="https://testimonial.to/ln-dev/all">
+                        Donne moi ton avis 😊
+                    </a></p>
                 <a class="footer-container-buy" href="https://www.buymeacoffee.com/lndev" target="_blank">
                     <img src="./img/BuyMeACoffee.webp" alt="buymeacoffee" />
                 </a>
