--- a/index.html
+++ b/index.html
@@ -820,6 +820,9 @@
                         <ion-icon name="logo-instagram"></ion-icon>
                     </a>
                 </div>
+                <p><a href="https://testimonial.to/ln-dev/all">
+                        Give me your opinion 😊
+                    </a></p>
                 <a class="footer-container-buy" href="https://www.buymeacoffee.com/lndev" target="_blank">
                     <img src="./img/BuyMeACoffee.webp" alt="buymeacoffee" />
                 </a>
