--- a/index.fr.html
+++ b/index.fr.html
@@ -162,7 +162,7 @@
                     <h1 class="header-container-title">Salut, moi c'est Leonel NGOYA<img src="img/Hi.gif"></h1>
                     <h1 class="header-container-subtitle">Développeur FrontEnd</h1>
                     <h2>Ici c'est mon site personnel, où vous y trouverez toutes les informations me concernant.</h2>
-                    <a href="https://drive.google.com/file/d/12FqgmRBQ_1IVlfZRDuB7w0iAZu30aqKC/view?usp=sharing"
+                    <a href="https://drive.google.com/file/d/1wC93QVBJYkpxAzXM6p5-xDzYeC065RRI/view?usp=sharing"
                         target="_blank" class="header-container-cv">Mon CV</a>
                 </div>
             </div>
@@ -335,6 +335,29 @@
                                         <button>GIT</button>
                                         <button>AGILE</button>
                                         <button>TRVAIL EN EQUIPE</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="line"></div>
+                            <div class="experience-cards-container-card">
+                                <div class="experience-cards-container-card-img">
+                                    <a href="https://www.workbud.com/" target="_blank"><img src="img/workbud.png"
+                                            alt="workbud"></a>
+                                </div>
+                                <div class="experience-cards-container-card-container">
+                                    <h3>FrontEnd Developer<span>Freelance</span></h3>
+                                    <p class="experience-cards-container-card-container-description">
+                                        <b>Decembre 2022 • Présent</b>
+                                    <p>Workbud • Remote</p>
+                                    </p>
+                                </div>
+                                <div class="experience-cards-container-card-description">
+                                    <h4>
+                                        Mon but était de concevoir des interfaces utilisateurs pour une application web
+                                    </h4>
+                                    <div>
+                                        <button>SVELTE JS</button>
+                                        <button>GIT</button>
                                     </div>
                                 </div>
                             </div>
