--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <h1 class="header-container-title">Hi, I'm Leonel NGOYA<img src="img/Hi.gif"></h1>
                     <h1 class="header-container-subtitle">Front End Developer</h1>
                     <h2>This is my personal site, where you will find all the information about me.</h2>
-                    <a href="https://drive.google.com/file/d/12FqgmRBQ_1IVlfZRDuB7w0iAZu30aqKC/view?usp=sharing"
+                    <a href="https://drive.google.com/file/d/1wC93QVBJYkpxAzXM6p5-xDzYeC065RRI/view?usp=sharing"
                         target="_blank" class="header-container-cv">My CV</a>
                 </div>
             </div>
@@ -329,6 +329,29 @@
                                         <button>GIT</button>
                                         <button>AGILE</button>
                                         <button>TEAM WORK</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="line"></div>
+                            <div class="experience-cards-container-card">
+                                <div class="experience-cards-container-card-img">
+                                    <a href="https://www.workbud.com/" target="_blank"><img src="img/workbud.png"
+                                            alt="workbud"></a>
+                                </div>
+                                <div class="experience-cards-container-card-container">
+                                    <h3>FrontEnd Developer<span>Freelance</span></h3>
+                                    <p class="experience-cards-container-card-container-description">
+                                        <b>December 2022 • Present</b>
+                                    <p>Workbud • Remote</p>
+                                    </p>
+                                </div>
+                                <div class="experience-cards-container-card-description">
+                                    <h4>
+                                        My goal was to design user interfaces for a web application
+                                    </h4>
+                                    <div>
+                                        <button>SVELTE JS</button>
+                                        <button>GIT</button>
                                     </div>
                                 </div>
                             </div>
