--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
                     alt="mail"></a>
         </nav>
 
+        <div class="guirlande guirlande1"></div>
+        <div class="guirlande guirlande2"></div>
+        <div class="guirlande guirlande3"></div>
+
         <header class="header" id="header">
             <div class="containers">
                 <div class="header-img">
